# libndi

./: CMakeLists.txt
examples/example-recv-gl/: CMakeLists.txt  ndi_recv_gl.cpp
src/: codec.c  recv.c
